--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nome do Profissional</title>
 </head>
+
 <body>
-    
+    <h1>Nome do Profissional</h1>
+
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+    </p>
+
+    <img width="400px" src="img/professor.jpg" alt="Imagem do Professor" title="Professor ">
+
+
+    <h3>Formação</h3>
+    <ol>
+        <li>Especilista Front End + Back End</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+    </ol>
+
+    <h3>Competências</h3>
+    <ol>
+        <li>Especilista Front End + Back End</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+    </ol>
+
+    <h3>Experiência</h3>
+    <ol>
+        <li>Especilista Front End + Back End</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+        <li>Lorem Ipsum is simply dummy text</li>
+    </ol>
+
+    <p>
+        Conheça mais sobre o professor acessando suas redes sociais
+        <a href="#"><img src="" alt="Icone Facebook"></a>
+        <a href="#"><img src="" alt="Icone Instagram"></a>
+        <a href="#"><img src="" alt="Icone GitHub"></a>
+    </p> 
 </body>
+
 </html>
