Atualização Redes Sociais.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <p>
         Conheça mais sobre o professor acessando suas redes sociais
-        <a href="#"><img src="" alt="Icone Facebook"></a>
-        <a href="#"><img src="" alt="Icone Instagram"></a>
-        <a href="#"><img src="" alt="Icone GitHub"></a>
+        <a href="#"><img width="20px" src="img/facebook.png" alt="Icone Facebook"></a>
+        <a href="#"><img width="20px" src="img/instagran.png" alt="Icone Instagram"></a>
+        <a href="#"><img width="20px" src="img/github.png" alt="Icone GitHub"></a>
     </p> 
 </body>
 
